fix: Adjust the letter spacing of the main title in the landing page

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -62,7 +62,7 @@ body {
   font-family: "HelveticaNeueBold";
   font-size: 150px;
   line-height: 120px;
-  letter-spacing: -12px;
+  letter-spacing: -6px;
   text-shadow: 8px 8px 20px #8B8B8B;
   filter: blur(2px);
 }
